0.757 (11.20.2006) - John Siracusa <siracusa@mindspring.com>

    * Added load_or_save() helper method.
    * Added support for MySQL's SET data type.
    * Fixed some SET and ARRAY bugs in QueryBuilder.
    * Modified the rules that govern metadata inheritance in order to
      allow multiple layers of abstract base classes.
    * The Loader will now pick up custom convention manager classes
      from the specified base class.

0.756 (10.29.2006) - John Siracusa <siracusa@mindspring.com>

    * Changed the interaction and behavior of the metadata object's 
      foreign_key_name_generator() method and the convention manager's
      auto_foreign_key_name() method to avoid some name conflict bugs
      and create a more sensible flow for foreign key naming.
      (Suggested by Graham Barr)
    * Added has_modified_children() has_loaded_related() methods to
      Rose::DB::Object::Util.
    * Added an init_with_column_value_pairs() helper method.  (Requested
      by Jonathan Vanasco)
    * Modified child objects are now correctly detected and handled by 
      cascading save().  (Reported by Lucian Dragus)
    * Fixed a bug that caused save(changes_only => 1, cascade => 1) to
      fail in cases where a child object set a key column in the parent
      object.  (Reported by Lucian Dragus)
    * Fixed a bug in the Manager that caused the with_objects parameter 
      to be ignored when the count_only parameter was set.  (Reported
      by Uwe Voelker)
    * The column_values_as_*() helper methods no longer require the 
      column_value_pairs() helper to also be imported.  (Reported
      by Jonathan Vanasco)
    * Fixed a bug caused by blank lines in JSON and YAML output. 
      (Patch by Jonathan Vanasco)
    * Setting a fixed-length character column to undef now works
      correctly.
    * Fixed a bug that caused the benchmark suite to fail under SQLite 
      due to a mishandling of the query_is_sql Manager parameter.